[gd_scene format=3 uid="uid://c5eqpslot001"]

[ext_resource type="Script" path="res://scenes/inventory/ui/equipment_slots_panel.gd" id="1"]

[node name="EquipmentSlotsPanel" type="PanelContainer"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Equipment Slots"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="HandsRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBox/HandsRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Hands:"
theme_override_font_sizes/font_size = 12

[node name="HandSlots" type="HBoxContainer" parent="VBox/HandsRow"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="ArmorLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Armor"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="ArmorRow" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HelmetRow" type="HBoxContainer" parent="VBox/ArmorRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArmorRow/HelmetRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Helmet:"
theme_override_font_sizes/font_size = 11

[node name="HelmetSlot" type="ColorRect" parent="VBox/ArmorRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="ChestRow" type="HBoxContainer" parent="VBox/ArmorRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArmorRow/ChestRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Chestplate:"
theme_override_font_sizes/font_size = 11

[node name="ChestSlot" type="ColorRect" parent="VBox/ArmorRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="GlovesRow" type="HBoxContainer" parent="VBox/ArmorRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArmorRow/GlovesRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Gloves:"
theme_override_font_sizes/font_size = 11

[node name="GlovesSlot" type="ColorRect" parent="VBox/ArmorRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="LegsRow" type="HBoxContainer" parent="VBox/ArmorRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArmorRow/LegsRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Legs:"
theme_override_font_sizes/font_size = 11

[node name="LegsSlot" type="ColorRect" parent="VBox/ArmorRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="BootsRow" type="HBoxContainer" parent="VBox/ArmorRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/ArmorRow/BootsRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Boots:"
theme_override_font_sizes/font_size = 11

[node name="BootsSlot" type="ColorRect" parent="VBox/ArmorRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="HSeparator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="JewelryLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "Jewelry"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="JewelryRow" type="VBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NecklaceRow" type="HBoxContainer" parent="VBox/JewelryRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/JewelryRow/NecklaceRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Necklace:"
theme_override_font_sizes/font_size = 11

[node name="NecklaceSlot" type="ColorRect" parent="VBox/JewelryRow"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
color = Color(0.3, 0.3, 0.3, 1)

[node name="RingsRow" type="HBoxContainer" parent="VBox/JewelryRow"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/JewelryRow/RingsRow"]
layout_mode = 2
custom_minimum_size = Vector2(80, 0)
text = "Rings:"
theme_override_font_sizes/font_size = 11

[node name="RingSlots" type="HBoxContainer" parent="VBox/JewelryRow"]
layout_mode = 2
theme_override_constants/separation = 3
